# routes/event.js
@@ -1,21 +1,22 @@
 const routes = require('express').Router();
 const events = require('../controllers/event.js');
+const validation = require('../validation');
 
 routes.get('/', events.findAll);
 
 // Create a new event
-routes.post('/', events.create);
+routes.post('/', validation.addNew, events.create);
 
-// // Retrieve all events in a certain zip code
-// routes.get('/', events.findByZip)
+// Retrieve all events in a certain zip code
+routes.get('/zip/:zip_code', events.findByZip);
 
-// // Retrieve a single event with id
-// routes.get('/:event_id', events.findOne);
+// Retrieve a single event with id
+routes.get('/:event_id', events.findOne);
 
-// // Update a event with id
-// routes.put('/:id', events.update);
+// Update a event with id
+routes.put('/:id', validation.updateOne, events.update);
 
-// // Delete a event with id
-// routes.delete('/:id', events.delete);
+// Delete a event with id
+routes.delete('/:id', events.delete);
 
 module.exports = routes;
