# server.js
@@ -31,14 +31,3 @@ app.listen(port, () => {
 });
 
 //cse341-backend2-event-manager.herokuapp.com
-
-// {
-//   "event_id": 1,
-//   "title": "Fireworks",
-//   "date": "7/4/22",
-//   "time": "9:00 PM",
-//   "city": "Taylor",
-//   "zip_code": "85939",
-//   "address": "Freemon Park",
-//   "description": "Everyone is welcome!"
-// }
